# tourner_api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f17b49f475b1_recreate_tournaments_and_players_tables.py
app/: config.py  db.py  main.py
app/api/: tournament.py
app/models/: tournament.py
app/repositories/: tournament.py
app/schemas/: tournament.py
app/services/: tournament.py
static/css/: style.css
templates/: tournament.html
tests/: test_tournament.py
