[tool.poetry]
     name = "mini-tournament-system"
     version = "0.1.0"
     description = "Mini tournament system API"
     authors = ["Your Name <your.email@example.com>"]

     [tool.poetry.dependencies]
     python = "^3.11"
     fastapi = "^0.115.0"
     uvicorn = "^0.30.0"
     sqlalchemy = "^2.0.0"
     asyncpg = "^0.29.0"
     alembic = "^1.13.0"
     pydantic = "^2.0.0"
     pydantic-settings = "^2.0.0"
     pytest = "^8.0.0"
     pytest-asyncio = "^0.23.0"
     ruff = "^0.6.0"
     black = "^24.0.0"
     greenlet = "^3.2.3"
     email-validator = "^2.0.0"
     psycopg2-binary = "^2.9.10"
     jinja2 = "^3.1.6"
     aiofiles = "^24.1.0"

     [build-system]
     requires = ["poetry-core"]
     build-backend = "poetry.core.masonry.api"

     [tool.black]
     line-length = 88

     [tool.pytest.ini_options]
     testpaths = [
         "tests"
     ]
     pythonpath = [
         "."
     ]

     [tool.ruff]
     line-length = 88
     [tool.ruff.lint]
     select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B"]
     ignore = ["D203", "D213"]